# paulgraham-rss

./: .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml  rss.xml
.github/workflows/: build.yml  daily-run.yml
src/paulgraham_rss/: __init__.py
src/paulgraham_rss/scripts/: grab-article.zsh  readability.js  save.py
