[project]
name = "paulgraham-rss"
version = "0.1.0"
description = "RSS feed generator for Paul Graham's essays"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "feedgen>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["paulgraham_rss"]
